data/derived/comb/progs/unify/prog0240.ml.out
Characters 282-297:
  adder ( mulByDigit i (List.rev (List.map (fun x->x*10) t )) ) @ (helper [] (h*i) :: []);;
                                                                   ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
